<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingStart="15dp"
    android:paddingTop="15dp"
    android:paddingEnd="15dp"
    android:paddingBottom="15dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_name"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/et_bg"
                android:hint="@string/enter_item_name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:typeface="monospace" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/item_quantity"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_item_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/et_bg"
                android:digits=".0123456789"
                android:hint="@string/enter_item_quantity"
                android:imeOptions="actionNext"
                android:inputType="numberSigned"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:typeface="monospace" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/item_description"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_item_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/et_bg"
                android:hint="@string/enter_item_description"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/errorView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/btn_bg"
                    android:text="@string/update_record"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:visibility="visible" />

                <ProgressBar
                    android:id="@+id/loadingView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone" />

            </FrameLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>